2014-01-27  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	[bug #41357] OS X: Avrdude messes with the usb stack?
	* usb_libusb.c (usbdev_close): Only issue the usb_reset() for
	Linux systems, as these are the only ones that seem to require
	it under some circumstances.

2014-01-22  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* configure.ac (libelf): check against elf_getshdrstrndx() rather
	than just elf_begin() only, so it is clear we found a sufficiently
	recent libelf to work with.

2014-01-22  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	Contributed by Alan Horstmann:
	bug #40897: AT Mega2560 not correctly programmed with stk500(v1) ISP (solution patch)
	* stk500.c: Implement extended address byte handling.
	* avrdude.conf.in (ATmega2560): enable stk500_devcode so
	STK500v1 protocol actually starts at all.

2014-01-17  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* flip1.c: Implement the meat of FLIP version 1 protocol.
	* avrdude.1: Document the new protocol.
	* doc/avrdude.texi: (Dito.)

2014-01-17  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* flip2.c (flip2_page_erase): Remove unimplemented function.
	* dfu.h: Correctly conditionalize <usb.h> vs. <lusb0_usb.h>;
	add adjustable timeout (struct dfu_dev); add dfu_abort()
	* dfu.c (dfu_abort): New function; implement adjustable timeout.

2014-01-17  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* configure.ac (libhid): Turn from AC_TRY_RUN into
	AC_TRY_COMPILE, so it also works for cross-compilation
	setups.

2014-01-16  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* dfu.c (dfu_init): Move the descriptor checks up into the
	FLIP protocol implementation.
	* flip2.c (flip2_initialize): (Dito.)
	* flip1.c (flip1_initialize): (Dito.)

2014-01-16  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* flip2.c: Rename from flip.c
	* flip2.h: Rename from flip.h
	* Makefile.am: Reflect the renaming.
	* dfu.c: Update information how to get GPL.
	* dfu.h: (Dito.)

2014-01-16  Joerg Wunsch <j.gnu@uriah.heep.sax.de>
